New feature ACCURACY is added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </div>
 <div id="text-box">
 	
-	<div id="article" onCopy="return false;" onpaste="return false;">In computing, a computer keyboard is a typewriter-style device which uses an arrangement of buttons or keys to act as a mechanical lever or electronic switch. Following the decline of punch cards and paper tape, interaction via teleprinter-style keyboards became the main input device for computers.
+	<div id="article" onCopy="return false;" onpaste="return false;">
 </div>
 <input id="textarea" rows="3"  cols="100" placeholder="Start typing here..." onCopy="return false;">
 
@@ -39,8 +39,13 @@
 	<span id="spa">Result</span>
 <h3 id="result">&nbsp</h3>
 </div>
+<div id="elements">
+	<span id="spa">Accuracy</span>
+<p id="acc">&nbsp</p>
+</div>
 <div id= "elements1">
 <button id="reset" onclick="reset()">Reset</button>
+<a href="index.html"><button id="typeagn">Type Again</button></a>
 </div>
 </div>
 
